AZUREUS VUZE CHANGELOG
-----------------

2008.xx.xx | Azureus Vuze 3.0.5.3

FEATURE: UI   | Protocol overhead is now shown in the speed graph [The 8472]
FEATURE: UI   | Downloads can now be moved and renamed while running - torrent will be auto-paused [amc1]
FEATURE: UI   | Plugin log views now support autoscrolling, pausing and regex filtering [The 8472]
FEATURE: UI   | Plugin menu items which in the right-click menu now appear in the "Torrent" menu also [amc1] 
FEATURE: UIv3 | Experimental option to use Mozilla/Firefox as browser widget on any platform (XulRunner or Firefox 3 must be installed) [The 8472]
FEATURE: Plug | Added resource downloader to provide way to download files from Sourceforge [amc1]
FEATURE: Plug | Added API methods to generically pop up the message box to a user [amc1]

CHANGE: Core  | Faster startup [The 8472]
CHANGE: Core  | Quicker to change a batch of files to "Do Not Download" in files view [amc1]
CHANGE: Core  | Added option to allow the removal of files linked outside the save directory when removing data [amc1]
CHANGE: UI    | Column menu option to disable fast renaming in files view, changed fast rename to behave more like the windows explorer [The 8472]

BUGFIX: Core  | Made change so that plugins could not inadvertently turn off Azureus extension protocol [amc1]
BUGFIX: Core  | The UDP tracker client option has been nonfunctional for quite a while now -> fixed [The 8472]


2008.04.10 | Azureus Vuze 3.0.5.2

FEATURE: UIv3 | Ability to rate directly from rating reminder activity entry [TuxPaper] 
FEATURE: UIv3 | Added progress spinner animation for the LightBox[knguyen]

CHANGE: Core  | Don't auto-UDP probe on initial announce if tracker not known to support UDP - hit on second and remember outcome [Parg]
CHANGE: Core  | Improve startup times by taking various torrent-load operations off main thread [Parg]
CHANGE: Core  | Add reason-messages for update check failures [Parg]